@@ -116,7 +116,7 @@ waitable_attr(dbref thing, const char *atr)
   } else {                      /* Attribute is set. Check for proper owner and flags and value */
     if ((AL_CREATOR(a) == GOD) && (AL_FLAGS(a) == SEMAPHORE_FLAGS)) {
       char *v = atr_value(a);
-      if (!*v || is_integer(v))
+      if (!*v || is_strict_integer(v))
         return 1;
       else
         return 0;
@@ -1380,7 +1380,7 @@ COMMAND(cmd_notify_drain)
                T("You may not specify a semaphore count with the ALL switch."));
         return;
       }
-      if (!is_uinteger(args_right[1])) {
+      if (!is_strict_uinteger(args_right[1])) {
         notify(executor, T("The semaphore count must be an integer."));
         return;
       }
